# Wren

./: .gitignore  CLOUD_TRAINING.md  README.md  bitnet-mrl-plm-research-plan.md  pyproject.toml  setup_cluster.sh  wren-research-plan.md
configs/: quick_comparison.yaml  swissprot_50m.yaml  swissprot_50m_fp16.yaml  test_tiny.yaml  tiny_50m.yaml  uniref50_a100.yaml  uniref50_b200.yaml
scripts/: benchmark.py  download_uniref50.sh  preprocess_data.py  run_fp16_baseline.sh  train.py
src/tinyplm/: __init__.py  config.py
src/tinyplm/data/: __init__.py  tokenizer.py
src/tinyplm/eval/: __init__.py
src/tinyplm/model/: __init__.py  attention.py  bitlinear.py  cope.py  ffn.py  norm.py  plm.py  rope.py  transformer.py
src/tinyplm/training/: __init__.py  losses.py  scheduler.py  trainer.py
src/wren/: __init__.py  config.py
src/wren/eval/: __init__.py
src/wren/model/: __init__.py  attention.py  bitlinear.py  cope.py  ffn.py  norm.py  plm.py  rope.py  transformer.py
src/wren/training/: __init__.py  losses.py  scheduler.py  trainer.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
